--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:12.0.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.android.volley:volley:1.0.0'
 }
